# api/Routes/Routes.go
@@ -43,6 +43,10 @@ func SetUpRouter() *gin.Engine {
 		{
 			grpTag.GET("/", Controllers.GetTags)
 		}
+		grpComment := v1.Group("/comments")
+		{
+			grpComment.GET("/:trackId", Controllers.GetComment)
+		}
 	}
 	return r
 }
